test/assets/invalid/expect-foldable.hs

a :: (Bool, Bool)
a = b 1

b [_] = (True, False)